Changes for Venice, 0.724 beta ??/??/????

* Change table state save/restore to avoid saving the entire table contents 

Changes for Venice, 0.723 beta 22/02/2011
=========================================

* Fixed bug #3137455 February 31st is accepted as a date
* Added alert functionality
* Added cursor tracking
* Keyboard shortcut to close windows.
* Improved internationalisation for console (Christian Brom) 

Changes for Venice, 0.722 beta 01/11/2010
-----------------------------------------

* Fixed Artificial Neural Network functionality
  (Updated manual, added input check)
* Fixed Bug #1617089 Average Cost not included in average cost of share
* Fixed bug #3062208 Keyboard shortcuts
* Now have the option for charts to display the newest data first. 

Changes for Venice, 0.721 beta 3/07/2010
=========================================
* Internationalisation:
  - German translation added (Christian Brom).

* Allow Settings for graphs to be changed without "toggling" the graph
* Ability to search Online Help 
* Gondola Language expression types are now determined by all the subexpressions not just the first operator.

Bug Fixes:

* Fix Quote Import/Export for locales which use commas as decimal points. (e.g. Germany)


Changes for Venice, 0.72 beta 21/03/2010
=========================================

* Added the ability to save and restore the state and position of windows.
* Added support for downloading quotes from finance.google.com.
* Added the ability to provide a suffix when importing from
  Yahoo quotes. This allows you to download, say, "CBA.AX" as
  "CBA".
* Added Fibonacci indicator
* Improved performance of AdvanceDecline from Database (Reduced number of database queries)


* Bug Fixes:
  - Fixed an off-by-one month error when downloading from float.com.au.
  - Fixed a bug where an exception would be thrown if the user
    clicked in the background.
  - Fixed an off-by-one day error in PointAndFigure chart (bug # 1880869)